# flantier

./: .gitignore  README.md  christmas-bot.py  configs.py  configs.py.sample  download_audio.py  flantier.py  flantier.service  keyboards.py  notes.md  participants.txt  pyproject.toml  requirements.txt  roulette.py  santa.py  settings_sample.toml  tirage.py  users.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pylint.yml
audio/: download_audio.py
src/flantier/: __init__.py  __main__.py  _commands_admin.py  _commands_flantier.py  _commands_gift.py  _commands_santa.py  _commands_user.py  _keyboards.py  _quotes_oss117.py  _roulette.py  _santa.py  _settings.py  _users.py  bot.py  christmas-bot.py  christmas_bot.py  commands_admin.py  commands_flantier.py  commands_gift.py  commands_user.py  flantier.py  keyboards.py  main.py  noel_flantier.py  roulette.py  santa.py  settings.py  settings_sample.toml  settings_template.toml  test.py  users.py
src/oss117audio/: download.py  downloader.py
